# tapectl

./: CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  tapectl-design-v4_0.md
.claude/commands/: autopilot.md  worktree-agent.md
.github/workflows/: ci.yml
docs/: design-errata.md  lto6-validation-checklist.md  mhvtl-baseline-recordings.txt  operator-guide.md  perf-baselines.md
docs/adr/: 0001-tape-authoritative-catalog-claims.md  0002-layout-plan-execute-confirm.md  0003-sealed-volumes-immutable-no-append.md  0004-sealed-copies-count-staleness-warns.md  0005-permanent-escrow-recipient.md  0006-storage-interface-first-class-stores.md
docs/audits/: 2026-07-18-code-quality-drift.md  2026-07-20-security-crypto-posture.md  2026-07-20-tests-ci-operability.md
docs/design/: layout-session.md
docs/man/: README.md  tapectl-archive-set.1  tapectl-audit.1  tapectl-cartridge.1  tapectl-catalog.1  tapectl-completions.1  tapectl-config.1  tapectl-db.1  tapectl-export.1  tapectl-import.1  tapectl-init.1  tapectl-key.1  tapectl-location.1  tapectl-quick-archive.1  tapectl-report.1  tapectl-restore.1  tapectl-snapshot.1  tapectl-stage.1  tapectl-staging.1  tapectl-tenant.1  tapectl-unit.1  tapectl-volume.1  tapectl.1
examples/: gen_man.rs
scripts/: mhvtl-verify-gate.sh
src/: config.rs  error.rs  lib.rs  main.rs  signal.rs  store.rs
src/cli/: archive_set.rs  audit.rs  cartridge.rs  catalog.rs  key.rs  mod.rs  (+10 more)
tests/: failure_modes.rs  integration.rs  mhvtl_e2e.rs  performance.rs  tenant_isolation.rs
validation/: README.md  dar-validate.sh
(+39 files in other folders)
