[package]
name = "tapectl"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant archival storage management for LTO tape and exportable encrypted directories"
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4"
rusqlite = { version = "0.39", features = ["bundled", "serde_json", "backup"] }
rusqlite_migration = "2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dialoguer = "0.11"
tabled = "0.15"
walkdir = "2"
bytesize = "2"
glob = "0.3"
age = { version = "0.11", features = ["cli-common"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
quick-xml = { version = "0.39", features = ["serialize"] }
ctrlc = "3"
nix = { version = "0.29", features = ["ioctl", "fs"] }
indicatif = "0.17"
rand = "0.9"
tar = "0.4"
tempfile = "3"

[profile.release]
lto = true
strip = true
